[package]
name = "rusty-saber"
description = "Pure rust implementation of the PQC scheme Saber"
authors = ["Lukas Kiem <lukas.kiem@outlook.com>", "Lukas Prokop <admin@lukas-prokop.at>"]
repository = "https://github.com/lkiem/rusty_saber"
readme = "README.md"
license = "MIT"
version = "1.0.0"
edition = "2021"
keywords = ["pqc", "post-quantum", "cryptography", "lattice"]
categories = ["cryptography"]

[features]
default = []
# firesaber variant in NIST security category 1
lightsaber = []
# firesaber variant in NIST security category 3
saber = []
# firesaber variant in NIST security category 5
firesaber = []
# do you need to compile the C reference implementation (required for tests and benchmarks)?
cref = []

[dependencies]
sha3 = "0.9.1"
aes = "0.7.5"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
rand = "0.8.4"
criterion = {version =  "0.3", features= ["html_reports"] }
criterion-cycles-per-byte = "0.1.2"

[[bench]]
name = "test_kem"
harness = false
